<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="hu.gearxpert.basichungariancourse.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
        style="@style/TestQuestion"
        android:text="@string/basic_suffixes" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intro1"
        android:layout_margin="5dp"
        android:padding="10dp"
        android:textColor="#000000"
        android:textSize="13sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal">

            <!--Pictures-->
                    <ImageView
                        style="@style/IntroPictures"
                        android:src="@drawable/house">
                    </ImageView>

                    <ImageView
                        style="@style/IntroPictures"
                        android:src="@drawable/forest">
                    </ImageView>

                    <ImageView
                        style="@style/IntroPictures"
                        android:src="@drawable/city">
                    </ImageView>

                    <ImageView
                        style="@style/IntroPictures"
                        android:src="@drawable/cupboard">
                    </ImageView>

        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextToPictures"
                    android:text="HÁZ"/>

                <TextView
                    style="@style/TextToPictures"
                    android:text="ERDŐ"/>

                <TextView
                    style="@style/TextToPictures"
                    android:text="VÁROS"/>

                <TextView
                    style="@style/TextToPictures"
                    android:text="SZEKRÉNY"/>

            </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/intro2"
            android:layout_margin="5dp"
            android:paddingTop="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="#000000"
            android:textSize="13sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/intro3"
            android:layout_margin="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="#000000"
            android:textSize="13sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/intro4"
            android:layout_margin="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="#000000"
            android:textSize="13sp"/>

<ImageView
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:src="@drawable/haz"
    android:layout_margin="10dp"
    android:scaleType="fitCenter"/>

    <Button
        style="@style/ButtonLayout"
        android:text="@string/start"
        android:onClick="clickedButtonStart"/>

    </LinearLayout>
</ScrollView>
