<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="hu.gearxpert.basichungariancourse.Main3Activity">

    <TextView
        style="@style/TestQuestion"
        android:text="@string/score_intro" />

    <LinearLayout style="@style/CardLayout">

        <TextView
            android:id="@+id/score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="10dp"
            android:textColor="#292929"
            tools:text="Your score: " />
    </LinearLayout>

    <LinearLayout style="@style/CardLayout">

        <TextView
            android:id="@+id/evaluation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="10dp"
            android:textColor="#292929"
            tools:text="Well done!" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <Button
            style="@style/ButtonLayout"
            android:layout_weight="1"
            android:onClick="wantNewGame"
            android:text="@string/try_again" />

        <Button
            style="@style/ButtonLayout"
            android:layout_weight="1"
            android:onClick="seeCorrectAnswers"
            android:text="@string/correct_answers" />
    </LinearLayout>


</LinearLayout>